re PR rtl-optimization/14838 (ICE when building with -O2 -g)

PR rtl-optimization/14838
	* emit-rtl.c (get_first_nonnote_insn): Don't assume first insn is a
	note.
	(get_last_nonnote_insn): Don't assume last insn is a note.

From-SVN: r91065